# v1/doc/swagger/openapi.yaml
@@ -18,9 +18,6 @@ servers:
     description: Production server.
   - url: http://dev.library-demo.local/api/v1
     description: Developemnt server.
-# tags:
-#   - account
-#   - books
 paths:
   /accounts:
     post:
@@ -122,15 +119,41 @@ paths:
               schema:
                 type: object
                 properties:
-                  access-token:
+                  id:
                     type: string
-                    description: Access token with format jwt.
-                  refresh-token:
+                    description: User id.
+                  auth_two_factor:
+                    type: boolean
+                    description: Si esta activado la autenticacion por dos factores.
+                  fullname:
                     type: string
-                    description: Refresh token para generar un nuevo access token.
+                    maxLength: 150
+                    description: User fullname.
+                  avatar:
+                    type: string
+                    description: Absolute url of avatar.
+                  device_id:
+                    type: string
+                    description: id of device generate random.
+                  token:
+                    type: object
+                    properties:
+                      access-token:
+                        type: string
+                        description: Access token with format jwt.
+                      refresh-token:
+                        type: string
+                        description: Refresh token para generar un nuevo access token.
+                        maxLength: 500
                 example:
-                  access-token: jwt
-                  refresh-token: token
+                  id: 123
+                  auth_two_factor: false
+                  fullname: Pepe Perez
+                  avatar: https://server.com/path/image.jpg
+                  device_id: 234
+                  token:
+                    access-token: jwt
+                    refresh-token: token
         '400':
           $ref: '#/components/responses/BadRequest'
         '403':
@@ -141,9 +164,10 @@ paths:
           $ref: '#/components/responses/GenericError'
         '5XX':
           $ref: '#/components/responses/GenericError'
-  /refesh-token:
+  /generate-access-token:
     post:
       summary: Generate a new access-token.
+      security: []
       tags:
         - accounts
       requestBody:
@@ -154,14 +178,25 @@ paths:
             schema:
               type: object
               properties:
-                refresh-token:
+                refresh_token:
                   type: string
                   description: Refresh token para generar un nuevo access token.
                   maxLength: 500
+                old_access_token:
+                  type: string
+                  description: Old access token.
+                device-id:
+                  type: string
+                  description: Device id.
+                  maxLength: 100
               example:
-                refresh-token: token
+                refresh_token: token
+                old_access_token: oldjwt
+                device_id: "123"
               required:
                 - refresh-token
+                - old_access_token
+                - device_id
       responses:
         '200':
           description: Data for mantain login.
@@ -383,7 +418,6 @@ paths:
           $ref: '#/components/responses/GenericError'
         '5XX':
           $ref: '#/components/responses/GenericError'
-  
   /users:
     get:
       summary: Returns a list of users.
