# v1/pkg/handlers/v1/models/resp/accounts.go
@@ -15,3 +15,8 @@ type Token struct {
 	AccessToken  string `json:"access_token,omitempty"`
 	RefreshToken string `json:"refresh_token,omitempty"`
 }
+
+// GenerateAccessToken ...
+type GenerateAccessToken struct {
+	AccessToken string `json:"access_token"`
+}
